discussion/kv_engine/182825/182825_rev5_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-54587: Don't fail startup if we can't get timestamp

Previously the audit daemon would refuse to start if it encountered
any "problems" trying to read, parse or pick out the timestamp from
the old audit file.

This patch change the behavior to "ignore" all such errors and use
the "current time" in the filename instead of the oldest event in
the file when it encountered any problems.

It'll still fail if there is an IO Error reported from the OS which
won't go away after retrying

Change-Id: Ief78db2ecf1538aeff3ac13f548fe718fa2ed57c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-11-21 09:54:47.000000000
Message: 
Uploaded patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-21 10:22:15.000000000
Message: 
Patch Set 5: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24353/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24353/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42948/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/auditd/src/auditfile.cc:233:26:
error: no member named "this_thread" in namespace "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42948/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21893/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/auditfile.cc:233:26: error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
                    std::this_thread::sleep_for(std::chrono::milliseconds{50});
                         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21893/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/auditd/src/auditfile.cc:233:26:
error: no member named "this_thread" in namespace "std" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21893/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23403/ : FAILURE

Failure of an engine_testapp test:

<pre>
Running [35/160]: test access scanner.../Users/couchbase/workspace/workspace/kv_engine.macos_master_2/kv_engine/engines/ep/tests/ep_testsuite.cc:3493 Test failed: `access log file (./ep_testsuite.value_eviction.comp_passive.db/access.log.0) should exist (got errno:2" (cb::io::isFile(name))
[2022-11-21T10:09:34.124Z] (632 ms) FAIL
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23403/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23940/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23940/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25203/ : FAILURE

ThreadSanitizer issue: data race /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:173 in std::__uniq_ptr_impl<Collections::VB::Manifest, std::default_delete<Collections::VB::Manifest> >::_M_ptr() const  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25203/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51172/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21267/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/651/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11621/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11711/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32358/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
